[gd_scene load_steps=14 format=3 uid="uid://cqagkxdakpnt"]

[ext_resource type="Script" path="res://UI/settings.gd" id="1_elegj"]
[ext_resource type="AudioStream" uid="uid://dgmjealr3lwp0" path="res://UI/Buttons/button_press.wav" id="2_ke0fy"]
[ext_resource type="PackedScene" uid="uid://d0h7ptlod7ywd" path="res://UI/Buttons/game_button.tscn" id="3_md4i7"]
[ext_resource type="Texture2D" uid="uid://rrmdr4vm3cdm" path="res://UI/drop_down_arrow.svg" id="4_6dt0t"]
[ext_resource type="Texture2D" uid="uid://c2d0dvy11hh33" path="res://UI/ui_grabber.svg" id="4_bslej"]
[ext_resource type="Texture2D" uid="uid://ck2dc757bi1vf" path="res://UI/radio_button_selected.svg" id="4_ntu5b"]
[ext_resource type="Texture2D" uid="uid://fk3mrmwhbeeo" path="res://UI/radio_button_unselected.svg" id="5_2t41c"]

[sub_resource type="Theme" id="Theme_y3vnj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jn385"]
bg_color = Color(1, 1, 1, 0.337255)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_7ce5l"]
PopupMenu/colors/font_outline_color = Color(0, 0, 0, 1)
PopupMenu/constants/outline_size = 15
PopupMenu/font_sizes/font_size = 42
PopupMenu/icons/radio_checked = ExtResource("4_ntu5b")
PopupMenu/icons/radio_unchecked = ExtResource("5_2t41c")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_jn385")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60ltb"]
bg_color = Color(1, 1, 1, 0.337255)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 15.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2t3bv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oe6qt"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_elegj")
metadata/_edit_use_anchors_ = true

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ke0fy")
volume_db = 10.0
bus = &"UI"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 100

[node name="WholeScreen" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/WholeScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" parent="MarginContainer/WholeScreen/HBoxContainer2" instance=ExtResource("3_md4i7")]
layout_mode = 2
button_text = "Back"
pressed_signal_name = "back_button_pressed"
font_size = 32

[node name="CreditsButton2" parent="MarginContainer/WholeScreen/HBoxContainer2" instance=ExtResource("3_md4i7")]
layout_mode = 2
button_text = "Credits"
pressed_signal_name = "credits_button_pressed"
font_size = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/WholeScreen"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 35

[node name="Labels" type="VBoxContainer" parent="MarginContainer/WholeScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ControlType" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "Control
Type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyLevel" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "Difficulty
Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "Background"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sfx" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "Sound
Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="Label" parent="MarginContainer/WholeScreen/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "User
Interface"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sliders" type="VBoxContainer" parent="MarginContainer/WholeScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = SubResource("Theme_y3vnj")
theme_override_constants/separation = 25

[node name="ControlSelector" type="OptionButton" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = SubResource("Theme_7ce5l")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 50
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 42
theme_override_icons/arrow = ExtResource("4_6dt0t")
theme_override_styles/focus = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/normal = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/hover = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_60ltb")
alignment = 1
icon_alignment = 2
expand_icon = true
item_count = 2
selected = 0
popup/item_0/text = "Guide"
popup/item_0/id = 0
popup/item_1/text = "Follow"
popup/item_1/id = 1

[node name="DifficultySelector" type="OptionButton" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = SubResource("Theme_7ce5l")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 50
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 42
theme_override_icons/arrow = ExtResource("4_6dt0t")
theme_override_styles/focus = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/normal = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/hover = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_60ltb")
alignment = 1
icon_alignment = 2
expand_icon = true
item_count = 3
selected = 0
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="BackgroundSelector" type="OptionButton" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = SubResource("Theme_7ce5l")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 50
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 42
theme_override_icons/arrow = ExtResource("4_6dt0t")
theme_override_styles/focus = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/normal = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/hover = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_60ltb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_60ltb")
alignment = 1
icon_alignment = 2
expand_icon = true
item_count = 4
selected = 0
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Time Based"
popup/item_1/id = 1
popup/item_2/text = "Day"
popup/item_2/id = 2
popup/item_3/text = "Night"
popup/item_3/id = 3

[node name="MasterSlide" type="HSlider" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_icons/grabber = ExtResource("4_bslej")
theme_override_icons/grabber_highlight = ExtResource("4_bslej")
theme_override_icons/grabber_disabled = ExtResource("4_bslej")
theme_override_styles/slider = SubResource("StyleBoxFlat_2t3bv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_oe6qt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_oe6qt")
max_value = 1.0
step = 0.05
value = 0.5

[node name="MusicSlider" type="HSlider" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_icons/grabber = ExtResource("4_bslej")
theme_override_icons/grabber_highlight = ExtResource("4_bslej")
theme_override_icons/grabber_disabled = ExtResource("4_bslej")
theme_override_styles/slider = SubResource("StyleBoxFlat_2t3bv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_oe6qt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_oe6qt")
max_value = 1.0
step = 0.05

[node name="SfxSlider" type="HSlider" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_icons/grabber = ExtResource("4_bslej")
theme_override_icons/grabber_highlight = ExtResource("4_bslej")
theme_override_icons/grabber_disabled = ExtResource("4_bslej")
theme_override_styles/slider = SubResource("StyleBoxFlat_2t3bv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_oe6qt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_oe6qt")
max_value = 1.0
step = 0.05

[node name="UiSlider" type="HSlider" parent="MarginContainer/WholeScreen/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_icons/grabber = ExtResource("4_bslej")
theme_override_icons/grabber_highlight = ExtResource("4_bslej")
theme_override_icons/grabber_disabled = ExtResource("4_bslej")
theme_override_styles/slider = SubResource("StyleBoxFlat_2t3bv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_oe6qt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_oe6qt")
max_value = 1.0
step = 0.05

[connection signal="item_selected" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/ControlSelector" to="." method="_on_control_selector_item_selected"]
[connection signal="item_selected" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/DifficultySelector" to="." method="_on_difficulty_selector_item_selected"]
[connection signal="item_selected" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/BackgroundSelector" to="." method="_on_background_selector_item_selected"]
[connection signal="drag_ended" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/MasterSlide" to="." method="_on_master_slide_drag_ended"]
[connection signal="drag_ended" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/SfxSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="drag_ended" from="MarginContainer/WholeScreen/HBoxContainer/Sliders/UiSlider" to="." method="_on_ui_slider_drag_ended"]
